--- a/src/app/Pages/job/my-jobs/my-jobs.component.html
+++ b/src/app/Pages/job/my-jobs/my-jobs.component.html
@@ -1,1 +1,117 @@
-<p>my-jobs works!</p>
+<div class="container">
+
+
+   
+    <div class="heading">My Jobs</div>
+
+    <div class="cards">
+
+    <div class="row">
+            
+      <div class="col-md-3">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Secondary card title</h5>
+
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+            <div class="btns">
+                <button type="button" class="btn btn-outline-primary">Update</button>
+               
+                <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-3">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Secondary card title</h5>
+            
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+            <div class="btns">
+                <button type="button" class="btn btn-outline-primary">Update</button>
+               
+                <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-3">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Secondary card title</h5>
+            
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+            <div class="btns">
+                <button type="button" class="btn btn-outline-primary">Update</button>
+               
+                <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+
+      <div class="col-md-3">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Secondary card title</h5>
+            
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+            <div class="btns">
+                <button type="button" class="btn btn-outline-primary">Update</button>
+               
+                <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
+          <div class="card-header">Header</div>
+
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Secondary card title</h5>
+            
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+            <div class="btns">
+                <button type="button" class="btn btn-outline-primary">Update</button>
+               
+                <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      
+
+
+
+    </div>
+
+    </div>
+  </div>
+  
