--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
         </li>
 
         <li class="nav-item" *ngIf="userInfo?.employer?.role == 3">
-          <a class="nav-link" routerLink="/create-new-job">My Profile</a>
+          <a class="nav-link" routerLink="/profile">My Profile</a>
         </li>
 
 
